# shopping-agent

./: .coverage  .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODE_QUALITY_AUDIT.md  CODE_REVIEW_HIGHLIGHTS.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  DEAD_CODE_REMOVAL_ANALYSIS.md  DEPLOYMENT.md  LEGAL_LIABILITY_ASSESSMENT.md  README.md  ROADMAP_EXECUTIVE_SUMMARY.md  SECRETS_MANAGEMENT.md  SECURITY_ACTION_PLAN.md  SECURITY_AUDIT_REPORT.md  TILE_INTERACTION_DIAGRAM.md  TROUBLESHOOTING.md  agent-facilitated-competitive-bidding-prd.md  buyanything-ai-ai-agent-facilitated-multi-category-marketplace-PRD.md  check_db.py  docker-compose.dev.yml  get_backend_logs.py  print_conflicts.py  query_indexes.py  resend_inbound.html  resolve_all.py  resolve_conflicts.py  test_csv.csv  test_ebay_404.js  test_self_call.py  update_self_url.py
apps/backend/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  LOGO_COLLECTION_SUMMARY.md  README.md  affiliate.py  audit.py  check_db.py  clerk_auth.py  create_test_session.py  database.py  debug_seller.py  dependencies.py  diagnostics_utils.py  exceptions.py  github_client.py  init_db_manual.py  main.py  models.py  notifications.py  pyproject.toml  railway.json  requirements.txt  reset_prod_db.py  retention.py  scratch_rainforest.py  seed_auth.py  sourcing.py  start.sh  startup_migrations.py  storage.py  test_chat_error.py  test_chat_error_2.py  test_chat_payload.py  test_clickout.py  test_csv.csv
apps/backend/.factory/: DISCOVERIES.md
apps/backend/alembic/: env.py
apps/backend/backups/: vendors_2026-02-17_0339.json
apps/backend/data/: vendors-export.csv
apps/backend/docs/: BUG_REPORT_TEST_DATA_FIX.md  DATABASE_OPTIMIZATION.md  PERFORMANCE_TESTING.md
apps/backend/models/: __init__.py  admin.py  auth.py  bids.py  bookmarks.py  coupons.py  deals.py  marketplace.py  outreach.py  pop.py  rows.py  social.py
apps/backend/observability/: __init__.py  health.py  logging.py  metrics.py  middleware.py  sentry_config.py
apps/backend/routes/: admin.py  admin_metrics.py  admin_ops.py  auth.py  auth_helpers.py  auth_profile.py  bids.py  bob.py  bookmarks.py  bugs.py  chat.py  chat_helpers.py  checkout.py  clickout.py  comments.py  contracts.py  deals.py  likes.py  merchants.py  notifications.py  outreach.py  outreach_blast.py  outreach_campaigns.py  outreach_tracking.py  outreach_vendors.py  pop.py  pop_brand_portal.py  pop_chat.py  pop_helpers.py  pop_list.py  pop_notify.py  pop_offers.py  pop_processor.py  pop_referral.py  pop_social.py  pop_swaps.py  pop_wallet.py  projects.py  public_search.py  public_vendors.py  (+16 more)
apps/backend/scripts/: backup_vendors.py  check_db.py  cleanup_db.py  cleanup_test_bugs.py  collect_vendor_logos.py  cpg_outreach_enrich.py  discover_vendors.py  discover_vendors_config.py  discover_vendors_search.py  dump_vendors_async.py  dump_vendors_json.py  enrich_vendors.py  fix_schema.py  fix_schema_data.py  run_ddgs.py  (+20 more)
(+1616 files in other folders)
